--- a/another.html
+++ b/another.html
@@ -11,7 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="main.js"></script>
-    <title>First page</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <div class="container-fluid">
@@ -22,8 +22,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="me.html">About me</a>
@@ -31,14 +31,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="another.html">Another link</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Another link <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
         </nav>
         <div class="col-12 titlebar">
-            <h1>HOMEPAGE</h1>
+            <h1>ANOTHER LINK</h1>
         </div>
         <div class="col-12 content">
             <div class="row">
